# STNMF_with_AFHALS

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: pypi.yml
docs/: requirements.txt
docs/source/: conf.py  docutils.conf  index.rst
docs/source/_static/css/: bracket_notation.css  carousel_width.css  design_wordwrap.css  remove_links.css
docs/source/advanced/: callbacks.rst  classes.rst  consensus.rst  plotting.rst
docs/source/api/: callbacks.rst  core.rst  init.rst  mf.rst  nnls.rst  plot.rst  preprocessing.rst  spatial.rst  util.rst
docs/source/guides/: examples.rst  install.rst  quickstart.rst
stnmf/: __init__.py  core.py  init.py  mf.py  nnls.py  plot.py  spatial.py  util.py
stnmf/callbacks/: __init__.py  consensus.py  perturbation.py  residual.py  stopping_criterion.py
stnmf/preprocessing/: __init__.py  spiketriggered.py
